# IndexPredictor

./: .env  docker-compose.yml
index-predictor/: Dockerfile  next.config.ts  package-lock.json  package.json
index-predictor/.next/: trace
index-predictor/.next/server/: app-paths-manifest.json  server-reference-manifest.json
index-predictor/app/: globals.css  layout.tsx  page.tsx
index-predictor/app/api/index/[type]/: route.ts
index-predictor/app/api/ndmi/: route.ts
index-predictor/app/api/ndvi/: route.ts
index-predictor/app/components/: footer.tsx  header.tsx
index-predictor/app/landing-page/: page.tsx
index-predictor/app/lib/: mongodb.ts
index-predictor/app/predictor-detail/: layout.tsx  page.tsx
index-predictor/app/predictor-detail/components/: google-map-view.tsx  header.tsx  map.tsx  my-chart.tsx
index-predictor/app/predictor-detail/coordinates/: page.tsx
index-predictor/app/predictor-detail/ndmi/: page.tsx
index-predictor/app/predictor-detail/ndvi/: page.tsx
server/: .gitignore  Dockerfile  app.py  date_management.py  fetch_data.py  model_management.py  predict_management.py  pyproject.toml  raw_data_management.py  requirements.txt  train_model.py
server/model/ndmi/: 2025-week45-predicted.csv
server/model/ndvi/: 2025-week45-predicted.csv
