[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indexpredictor-server"
version = "0.1.0"
description = "Flask backend for IndexPredictor"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "flask-cors",
  "flask-apscheduler",
  "gunicorn"
]
authors = [{ name = "Pistachio", email = "nudthaya.opor@gmail.com" }]

# Since your files are standalone .py modules in the root folder:
[tool.setuptools]
py-modules = [
  "app",
  "fetch_data",
  "raw_data_management",
  "model_management",
  "predict_management"
]
